--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	 		  <li>Aliquam consectetuer adipiscingconsectetuer adipiscing elit.</li>   
 	 		  <li>Elit.tincidunt mauris eu risus.</li>
 			   <li>Vestibuconconsectetuer adipiscing elit.sectetuer adipiscing</li>   
+			  <!--  <li>Elit.lum auctor dapibus .</li> -->
 			   <li> Nunc digniconsectetuer adipiscing elit.ssim risus id metus.</li>
 			   <li> Cras ornare tristiqconsectetuer adipiscing elit.ue elit.</li> 
 			   <li>Vivamus veconsectetuer adipiscing elit.</li>
